// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb /> should render component with props 1`] = `
<div
  className="ts breadcrumb"
>
  <div
    className="section"
  >
    <a
      onClick={[MockFunction]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      Post List
    </a>
  </div>
  <div
    className="section active"
  >
    <i
      className="right angle icon divider"
    />
    title
  </div>
</div>
`;

exports[`<Breadcrumb /> should render initial component 1`] = `
<div
  className="ts breadcrumb"
>
  <div
    className="section"
  >
    <a
      onClick={[MockFunction]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      Post List
    </a>
  </div>
  <div
    className="section active"
  >
    <i
      className="right angle icon divider"
    />
  </div>
</div>
`;
